minor fix (image size, spacing)

--- a/src/components/Hero/Hero.sass
+++ b/src/components/Hero/Hero.sass
@@ -30,7 +30,7 @@ $layout-breakpoint-lg: 1000px
     &__about
         padding: 20px 0 40px
         font-size: 1.2rem
-        letter-spacing: 0.5px
+        word-spacing: 0.5px
         width: 80%
     &__button
         background: var(--blue0)
